# fastapi-tutorial

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  auth.py  main.py  migrate_db.py
api/cruds/: task.py  user.py
api/models/: user.py
api/routers/: auth.py  done.py  task.py
api/schemas/: task.py  user.py
app-front/: Dockerfile  package-lock.json  package.json
app-front/src/: App.css  App.jsx  Auth.css  AuthContext.jsx  Login.jsx
tests/: test_main.py
