[project]
name = "demo-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.11,<0.116.0",
    "uvicorn[standard]>=0.34.0,<0.35.0",
    "sqlalchemy>=2.0.39,<3.0.0",
    "aiomysql>=0.2.0,<0.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.25.3",
    "aiosqlite>=0.21.0",
    "httpx>=0.28.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.uv]
dev-dependencies = [
    "pytest-asyncio>=0.25.3",
    "aiosqlite>=0.21.0",
    "httpx>=0.28.1"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

